# vibe-auto-cost

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json
auto-evaluation/app/: BUILD_PLAN.md  e2e.mjs  eval_round_1.md  pyproject.toml  requirements.txt  test_playwright.js  test_polish.mjs
auto-evaluation/app/backend/: __init__.py  config.py  main.py  sample_data.py  test_engine.py
auto-evaluation/app/frontend/: app.js  styles.css
auto-evaluation/app/reconstructed/: .env.example  Makefile  README.md  run.sh
auto-evaluation/app/reconstructed/backend/: load_data.py
auto-evaluation/app/reconstructed/frontend/: index.html
autodoc-clone/: index.html  package-lock.json  verify_polish.mjs
autodoc-clone/src/: App.jsx
clone-web/: eval_round1.mjs  eval_round2.mjs  extract_nav.mjs  probe_autodoc.mjs  reextract_navs.mjs  reshoot.mjs  verify.mjs  verify_r2.mjs
clone-web/team-log/: builder_plan.md  self_check_r2.json  test_plan.md
logs1/: README.md
logs1/scripts/: dlfonts.mjs
logs1/sessions/: engineer_current_session.jsonl  worker_builder.jsonl  worker_builder_prior.jsonl
logs1/team-log/: eval2_raw.json  eval_round_1.md  tokens.md
logs2/: README.md
logs2/contract/: 2026-07-phase2-contract.md
logs2/sessions/: engineer_session.jsonl  worker_p2_builder.jsonl
logs3/: README.md
logs3/artifacts/: submission2_manifest.txt  submission3_manifest.txt  submission_manifest.txt
logs3/contracts/: phase1_contract.md  (+1 more)
submission/: README.md  feedback.md
submission2/: README.md  feedback.md
submission3/: README.md
vibe-loop/: README.md
(+90 files in other folders)
